fix scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,16 +227,16 @@ body {
 }
 
 .sponsor-wrapper-in::-webkit-scrollbar {
-    width: 0.5rem;
+    width: 0.2rem;
     
 }
 
 .sponsor-wrapper-in::-webkit-scrollbar-track {
-    background: 0 0
+    background: 0 0;
 }
 
 .sponsor-wrapper-in::-webkit-scrollbar-thumb {
-    background: #666;
+    background: var(--red);
     border-radius: 1rem;
     padding:0.25rem;
 }
@@ -246,9 +246,21 @@ body {
     border-radius: 15px;
 }
 
-::-webkit-scrollbar-thumb:hover {
-    background: #0b99c9;
+.overlay::-webkit-scrollbar {
+    width: 0.3rem;
+    
 }
+
+.overlay::-webkit-scrollbar-track {
+    background: 0 0;
+}
+
+.overlay::-webkit-scrollbar-thumb {
+    background: var(--red);
+    border-radius: 15px;
+    padding:0.25rem;
+}
+
 
 .btn:hover .btn__slide {
     width: calc(100% + 15px);
